unpackaged/main/default/objects/ERS_Payment_Line_Item__c/ERS_Payment_Line_Item__c.object-meta.xml
<CustomObject>
    <label>ERS Payment Line Item</label>
    <nameField>
        <displayFormat>PTLI-{000000}</displayFormat>
        <label>Payment Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERS_Payment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>