unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>15</length>
    <type>Text</type>
</CustomField>