unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/ACG_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ACG_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adjustment</label>
    <type>Checkbox</type>
</CustomField>