unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/ACG_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>ACG_Call_Date__c</fullName>
    <label>Call Date</label>
    <type>Date</type>
</CustomField>