unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/ACG_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Level__c</fullName>
    <label>Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>Plus RV</fullName>
            </value>
            <value>
                <fullName>Premier RV</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
                <isActive>false</isActive>
                <label>PV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>