unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/ACG_Product__c.field-meta.xml
<CustomField>
    <fullName>ACG_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>