unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/ACG_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>ACG_Product_ID__c</fullName>
    <formula>ACG_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product ID</label>
    <type>Text</type>
</CustomField>