unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/ACG_Units__c.field-meta.xml
<CustomField>
    <fullName>ACG_Units__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>