unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <formula>LPAD(TEXT(ROUND(Total_Amount__c,2)* 100), 7, &#39;0&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge</label>
    <type>Text</type>
</CustomField>