unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Ledger_Account__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Account__c</fullName>
    <formula>TEXT(ACG_Product__r.Ledger_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger Account</label>
    <type>Text</type>
</CustomField>