unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Night_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Night_Premium_Rate__c</fullName>
    <label>Night Premium Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>