unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <label>Payment ID</label>
    <referenceTo>ERS_Payment__c</referenceTo>
    <relationshipLabel>ERS_Payment Line Items</relationshipLabel>
    <relationshipName>ERS_Payment_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>