unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Tcode__c.field-meta.xml
<CustomField>
    <fullName>Tcode__c</fullName>
    <formula>TEXT(ACG_Product__r.Tcode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tcode</label>
    <type>Text</type>
</CustomField>