unpackaged/main/default/objects/ERS_Payment_Line_Item__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <formula>TEXT(ACG_Product__r.Units__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units</label>
    <type>Text</type>
</CustomField>